Inserting note to db

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,11 +1,11 @@
 ##JDBC CONFIG
-jdbc.driverClassName = com.postgres.Driver
-jdbc.url = jdbc:postgres://localhost:5432/postgres
+jdbc.driverClassName = org.postgresql.Driver
+jdbc.url = jdbc:postgresql://localhost:5432/postgres
 jdbc.user = postgres
 jdbc.pass = postgres
 
 ##HIBTERNATE CONFIG
-hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+hibernate.dialect = org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
 hibernate.show_sql = true
 hibernate.format_sql = true
 hibernate.time_zone = CET
