Response from geonote controller

--- a/src/main/resources/persistence.properties
+++ b/src/main/resources/persistence.properties
@@ -1,8 +1,8 @@
 ##JDBC CONFIG
 jdbc.driverClassName = org.postgresql.Driver
-jdbc.url = jdbc:postgresql://localhost:5432/postgres
+jdbc.url = jdbc:postgresql://localhost:5432/local
 jdbc.user = postgres
-jdbc.pass = postgres
+jdbc.pass = post
 
 ##HIBTERNATE CONFIG
 hibernate.dialect = org.hibernate.spatial.dialect.postgis.PostgisPG95Dialect
