--- a/src/main/resources/geonote.properties
+++ b/src/main/resources/geonote.properties
@@ -2,3 +2,4 @@ geonote.spam_count = 5
 geonote.spam_radius = 200
 geonote.create_ok = geonote created successfully
 geonote.spam = too much notes in this area
+geonote.location_occupied = someone left note in this exact location
